# VHACK_2.0

./: .gitignore  CMakeLists.txt  assistant.py  build.bat  download_models.py  requirements.txt  test_llm.py  test_tts.py
.cache/clangd/index/: assistant_brain.cpp.0A4DE6217BCBE069.idx  assistant_brain.h.97DD762BDEC3C3F0.idx  audio_engine.cpp.9CD180F57795EB91.idx  audio_engine.h.10B234211FC7D9C7.idx  ggml-alloc.h.6582224F485B1419.idx  ggml-backend.h.53EF5E07D673404C.idx  ggml-cpu.h.919EB2A156B1288A.idx  ggml-opt.h.07E1128F88DB2F93.idx  ggml.h.BEA36D1321169423.idx  llama.h.555C413D3487292D.idx  main.cpp.E7A979EDD6966942.idx  miniaudio.h.175F6FEBD744C220.idx  whisper.h.5BDA949804DA0BCC.idx
src/: assistant_brain.cpp  assistant_brain.h  audio_engine.cpp  audio_engine.h  main.cpp
